# dg

./: .gitignore  Cargo.toml  README.md  count.sh  lines.txt  output.txt
client/: Cargo.toml
client/assets/: Floor_Modular.blend  Player.Prototype.ron  Wall_Modular.blend  dg_modular.blend  dg_modular.blend1  dg_modular.fbx  floor.glb  rpg_man.glb  slime.blend  slime.blend1  slime.glb  two_hander.glb  wall.glb  wall_cube.glb  weapons.glb
client/assets/prototypes/: two_hander.prototype.ron
client/src/: assets.rs  camera.rs  client.rs  connection.rs  init.rs  input.rs  movement.rs  pathfinding.rs  player.rs  player_pathing.rs  receive.rs  resources.rs  sync.rs
client/src/entities/: extra.rs  mod.rs
client/src/entities/door/: control.rs
client/src/entities/player/: anims.rs  control.rs  healthbar.rs  mod.rs
client/src/entities/slime/: anims.rs  extra.rs  mod.rs  spawn.rs
client/src/entities/wall/: assets.rs  extra.rs  mod.rs  spawn.rs
lib/: Cargo.toml
lib/src/: channels.rs  components.rs  lib.rs  resources.rs
server/: Cargo.toml
server/src/: connection.rs  events.rs  plugins.rs  receive.rs  resources.rs  send.rs  server.rs  state.rs  sync.rs  world.rs
shared/: Cargo.toml
shared/src/: components.rs  lib.rs
