[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy_renet = "0.0.7"
serde = "1.0.155"
shared = { path = "../shared/" }
smooth-bevy-cameras = "0.8.0"
