[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_renet = "0.0.7"
bincode = "1.3.3"
serde = "1.0.155"
lib = { path = "../lib/" }
smooth-bevy-cameras = "0.8.0"
rand = "0.8.5"
bevy-inspector-egui = "0.18.1"
leafwing-input-manager = "0.9.0"
bevy_mod_picking = {git = "https://github.com/Fincap/bevy_mod_picking", branch = "migrate-bevy-0.10.0"}
seldom_state = "0.5.0"
bevy_easings = "0.10.0"
