[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_renet = "0.0.7"
bincode = "1.3.3"
serde = "1.0.155"
seldom_state = "0.5.0"
leafwing-input-manager = "0.9.2"
bevy_proto = "0.10.0"
