[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_renet = "0.0.7"
bincode = "1.3.3"
serde = "1.0.155"
lib = { path = "../lib" }
bevycheck = "0.5.2"
rand = "0.8.5"
seldom_state = "0.5.0"
bevy_proto = "0.10.0"
